[package]
name = "slight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
derive_more = "0.99.17"
once_cell = "1.17.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
