[package]
name = "slight"
description = "Backlight and LED devices control for Linux."
homepage = "https://github.com/spikespaz/slight"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["backlight", "brightness"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
derive_more = "0.99.17"
once_cell = "1.17.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
test-case = "3.3.1"

[profile.release]
strip = true
lto = true
panic = "abort"
